// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> renders defaults correctly 1`] = `
<div
  className="progress-bar"
>
  <div
    className="bg-light-gray h1 br-pill overflow-hidden w-100"
  >
    <div
      className="h1 bg-gray br-pill shadow-2"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> renders large version correctly 1`] = `
<div
  className="progress-bar"
>
  <div
    className="bg-light-gray h2 br-pill overflow-hidden w-100"
  >
    <div
      className="h2 bg-gray br-pill shadow-2"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;
